# myLoq

./: .gitignore  Makefile  README.md  TODOs  graph  hwloc-test  makedot.sh  makepdf.sh  meson.build
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  hw-test
builddir/hwloc@sha/: libhwloc.so.symbols
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt  testlog.json  testlog.txt
builddir/meson-private/: coredata.dat.prev
builddir/meson-private/cmake_hwloc/: CMakeCache.txt  Makefile  cmake_install.cmake
hwloc-git/lib/: libhwloc.la  libhwloc.so.0  libhwloc.so.0.0.0  libnetloc.la  libnetloc.so.0  libnetloc.so.0.0.0
hwloc-git/lib/pkgconfig/: hwloc.pc
hwloc-git/sbin/: hwloc-dump-hwdata
hwloc-git/share/hwloc/: hwloc-dump-hwdata.service
hwloc-git/share/man/man1/: hwloc-annotate.1  hwloc-bind.1  hwloc-calc.1  hwloc-compress-dir.1  hwloc-diff.1  hwloc-distrib.1  hwloc-dump-hwdata.1  hwloc-gather-cpuid.1  hwloc-gather-topology.1  hwloc-info.1  hwloc-patch.1  hwloc-ps.1  lstopo-no-graphics.1
hwloc-git/share/man/man7/: hwloc.7
include/: algo.h  distances.h  hwloc-test.h  init_graph.h  output_graph.h  predicates.h  query_graph.h  visitors.h
src/: init_graph.cc  main.cc  output_graph.cc
xml/: source.txt
